src/test/ui/macros/issue-54441.stderr
error: missing `fn`, `type`, or `static` for extern-item declaration
  --> $DIR/issue-54441.rs:1:1
   |
LL | / macro_rules! m {
LL | |
LL | |     () => {
LL | |         let
   | |________^ missing `fn`, `type`, or `static`

error: aborting due to previous error

